[tool.poetry]
name = "ex-03"
version = "0.1.0"
description = ""
authors = ["Alan Jui <alanjui.1960@gmail.com>"]
readme = "README.md"
packages = [{include = "ex_03"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.15.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
